# fire-and-smoke-detection

./: README.md  requirements.txt
cpp/: CMakeLists.txt  main.cc  postprocess.cc  postprocess.h  rv1106.toolchain.cmake  smoke_model.c  smoke_model.cc  smoke_model.h
cpp/extra/: main.cc  postprocess.cc
cpp/utils/: image_utils.c
data/: dataset.txt
deployment/rk3588/python/: image_evaluator.py  live_camera_evaluator.py
notebooks/: image_exampl.ipynb  interface_rknn.ipynb  onnx_to_rknn.ipynb  rknn_export.ipynb  video_example.ipynb
utils/: process.py
